--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "@tsconfig/svelte/tsconfig.json",
     "compilerOptions": {
-        "target": "esnext",
+        "target": "es2021",  // 兼容 lang="ts" context="module"
         "useDefineForClassFields": true,
         "module": "esnext",
         "resolveJsonModule": true,
