--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "1.0.0-next.42",
         "@tsconfig/svelte": "^3.0.0",
-        "@tauri-apps/cli": "^1.0.0-rc.9",
+        "@tauri-apps/cli": "1.0.0-rc.10",
         "autoprefixer": "^10.4.7",
         "postcss": "^8.4.13",
         "svelte": "^3.48.0",
         "svelte-check": "^2.7.0",
-        "svelte-fluentui-icons": "^1.0.2",
+        "svelte-fluentui-icons": "^1.1.0",
         "svelte-navigator": "^3.1.5",
         "svelte-preprocess": "^4.10.6",
         "tailwindcss": "^3.0.24",
@@ -28,6 +28,6 @@
         "vite": "^2.9.8"
     },
     "dependencies": {
-        "@tauri-apps/api": "^1.0.0-rc.4"
+        "@tauri-apps/api": "1.0.0-rc.5"
     }
 }
