--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "tauri_build": "tauri build"
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "1.0.0-next.42",
+        "@sveltejs/vite-plugin-svelte": "1.0.0-next.44",
         "@tsconfig/svelte": "^3.0.0",
-        "@tauri-apps/cli": "1.0.0-rc.10",
+        "@tauri-apps/cli": "^1.0.0-rc.10",
         "autoprefixer": "^10.4.7",
         "postcss": "^8.4.13",
         "svelte": "^3.48.0",
@@ -25,9 +25,9 @@
         "tailwindcss": "^3.0.24",
         "tslib": "^2.4.0",
         "typescript": "^4.6.4",
-        "vite": "^2.9.8"
+        "vite": "^2.9.9"
     },
     "dependencies": {
-        "@tauri-apps/api": "1.0.0-rc.5"
+        "@tauri-apps/api": "^1.0.0-rc.5"
     }
 }
