--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "1.0.0-next.44",
         "@tsconfig/svelte": "^3.0.0",
-        "@tauri-apps/cli": "^1.0.0-rc.10",
+        "@tauri-apps/cli": "1.0.0-rc.11",
         "autoprefixer": "^10.4.7",
-        "postcss": "^8.4.13",
+        "postcss": "^8.4.14",
         "svelte": "^3.48.0",
-        "svelte-check": "^2.7.0",
+        "svelte-check": "^2.7.1",
         "svelte-fluentui-icons": "^1.1.0",
         "svelte-navigator": "^3.1.5",
         "svelte-preprocess": "^4.10.6",
